--- a/Projects/ProjectStarkSemi/manifest.json
+++ b/Projects/ProjectStarkSemi/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 1,
-  "Id": "ProjectStarKey",
-  "name": "ProjectStarKey",
+  "Id": "ProjectStarkSemi",
+  "name": "ProjectStarkSemi",
   "version": "1.0",
   "description": "",
-  "dllpath": "ProjectStarKey.dll",
-  "requires": "1.3.14.50"
+  "dllpath": "ProjectStarkSemi.dll",
+  "requires": "1.3.14.53"
 }
