--- a/UI/ColorVision.ImageEditor/ColorVision.ImageEditor.csproj
+++ b/UI/ColorVision.ImageEditor/ColorVision.ImageEditor.csproj
@@ -87,10 +87,10 @@
 	<ItemGroup>
 		<ProjectReference Include="..\ColorVision.Common\ColorVision.Common.csproj" />
 
-		<ProjectReference Include="..\ColorVision.Core\ColorVision.Core.csproj" />
+		<!--<ProjectReference Include="..\ColorVision.Core\ColorVision.Core.csproj" />-->
 
 		<!-- 非 Windows（如 Linux、macOS）用 NuGet 包 -->
-		<!--<PackageReference Include="ColorVision.Core" Version="1.3.9.3" />-->
+		<PackageReference Include="ColorVision.Core" Version="1.3.9.4" />
 		
 		<ProjectReference Include="..\ColorVision.Themes\ColorVision.Themes.csproj" />
 		<ProjectReference Include="..\ColorVision.UI\ColorVision.UI.csproj" />
