--- a/Plugins/ImageProjector/manifest.json
+++ b/Plugins/ImageProjector/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 1,
   "Id": "ImageProjector",
-  "name": "图片投影工具",
+  "name": "\u56fe\u7247\u6295\u5f71\u5de5\u5177",
   "version": "1.0",
-  "description": "多显示器图片投影工具，支持全屏投影到指定显示器",
+  "description": "\u591a\u663e\u793a\u5668\u56fe\u7247\u6295\u5f71\u5de5\u5177\uff0c\u652f\u6301\u5168\u5c4f\u6295\u5f71\u5230\u6307\u5b9a\u663e\u793a\u5668",
   "dllpath": "ImageProjector.dll",
-  "requires": "1.3.15.19"
+  "requires": "1.3.15.18"
 }
