--- a/Projects/ProjectShiyuan/ProjectShiyuan.csproj
+++ b/Projects/ProjectShiyuan/ProjectShiyuan.csproj
@@ -24,7 +24,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\Engine\ColorVision.Engine\ColorVision.Engine.csproj" />
+		<ProjectReference Include="..\..\Engine\ColorVision.Engine\ColorVision.Engine.csproj" />
+		<Reference Include="FlowEngineLib" Condition="!Exists('..\..\FlowEngineLib\FlowEngineLib.csproj')">
+			<HintPath>..\..\DLL\FlowEngineLib.dll</HintPath>
+			<Private>True</Private>
+		</Reference>
+		<Reference Include="ST.Library.UI" Condition="!Exists('..\..\ST.Library.UI\ST.Library.UI.csproj')">
+			<HintPath>..\..\DLL\ST.Library.UI.dll</HintPath>
+			<Private>True</Private>
+		</Reference>
 	</ItemGroup>
 
 	<ItemGroup>
