--- a/Projects/ProjectHeyuan/ProjectHeyuan.csproj
+++ b/Projects/ProjectHeyuan/ProjectHeyuan.csproj
@@ -10,11 +10,11 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\Engine\ColorVision.Engine\ColorVision.Engine.csproj" />
-		<Reference Include="FlowEngineLib" Condition="!Exists('..\..\FlowEngineLib\FlowEngineLib.csproj')">
+		<Reference Include="FlowEngineLib" Condition="!Exists('..\..\Engine\FlowEngineLib\FlowEngineLib.csproj')">
 			<HintPath>..\..\DLL\FlowEngineLib.dll</HintPath>
 			<Private>True</Private>
 		</Reference>
-		<Reference Include="ST.Library.UI" Condition="!Exists('..\..\ST.Library.UI\ST.Library.UI.csproj')">
+		<Reference Include="ST.Library.UI" Condition="!Exists('..\..\Engine\ST.Library.UI\ST.Library.UI.csproj')">
 			<HintPath>..\..\DLL\ST.Library.UI.dll</HintPath>
 			<Private>True</Private>
 		</Reference>
