--- a/Test/opencv_helper_test/opencv_helper_test.vcxproj
+++ b/Test/opencv_helper_test/opencv_helper_test.vcxproj
@@ -62,14 +62,17 @@
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+    <Import Project="..\..\packages\nlohmann.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\..\packages\OpenCV.Debug.x64.props" />
+    <Import Project="..\..\packages\nlohmann.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\..\packages\OpenCV.Release.x64.props" />
+    <Import Project="..\..\packages\nlohmann.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -161,7 +164,13 @@
     <ClInclude Include="function.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="opencv_helper_test.vcxproj.new" />
     <None Include="README_test_find_luminous_area.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\opencv_helper\opencv_helper.vcxproj">
+      <Project>{aa343239-476e-43e3-bee3-d3313c883341}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
