--- a/Core/ColorVisionIcons64/ColorVisionIcons64.vcxproj
+++ b/Core/ColorVisionIcons64/ColorVisionIcons64.vcxproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <Image Include="cie.ico" />
     <Image Include="ColorVision1.ico" />
+    <Image Include="cvx.ico" />
     <Image Include="flow.ico" />
     <Image Include="Grid.ico" />
     <Image Include="grif.ico" />
