--- a/Core/ColorVisionIcons64/ColorVisionIcons64.vcxproj.filters
+++ b/Core/ColorVisionIcons64/ColorVisionIcons64.vcxproj.filters
@@ -54,5 +54,8 @@
     <Image Include="flow.ico">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="cvx.ico">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
