--- a/Core/ColorVisionIcons64/ColorVisionIcons64.vcxproj.filters
+++ b/Core/ColorVisionIcons64/ColorVisionIcons64.vcxproj.filters
@@ -57,5 +57,8 @@
     <Image Include="cvx.ico">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="cvxp.ico">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
