--- a/Core/ColorVisionIcons64/ColorVisionIcons64.vcxproj
+++ b/Core/ColorVisionIcons64/ColorVisionIcons64.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -159,6 +159,7 @@
     <Image Include="flow.ico" />
     <Image Include="Grid.ico" />
     <Image Include="grif.ico" />
+    <Image Include="Paomedia-Small-N-Flat-Key.ico" />
     <Image Include="raw.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
