--- a/UI/ColorVision.UI.Desktop/ColorVision.UI.Desktop.csproj
+++ b/UI/ColorVision.UI.Desktop/ColorVision.UI.Desktop.csproj
@@ -5,27 +5,44 @@
 		<Nullable>enable</Nullable>
 		<UseWPF>true</UseWPF>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<VersionPrefix>1.3.9.2</VersionPrefix>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<PackageReadmeFile></PackageReadmeFile>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-		<VersionPrefix>1.3.9.2</VersionPrefix>
 		<PackageProjectUrl>https://github.com/xincheng213618/scgd_general_wpf</PackageProjectUrl>
 		<IncludeSymbols>True</IncludeSymbols>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<OutputType>WinExe</OutputType>
 	</PropertyGroup>
+
+
 	<ItemGroup>
-		<PackageReference Include="log4net" Version="3.2.0" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <ProjectReference Include="..\ColorVision.UI\ColorVision.UI.csproj" />
+  </ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Markdig.Signed" Version="0.43.0" />
+		<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3595.46" />
+		<PackageReference Include="AvalonEdit" Version="6.3.1.120" />
+		<PackageReference Include="WPFHexaEditor" Version="2.1.7" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\ColorVision.UI\ColorVision.UI.csproj" />
-		<ProjectReference Include="..\ColorVision.Database\ColorVision.Database.csproj" />
 		<None Include="README.md">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
 	</ItemGroup>
 	<ItemGroup>
+		<None Include="Assets\css\github-markdown.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<Pack>true</Pack>
+		</None>
+	</ItemGroup>
+	<ItemGroup>
+	  <Compile Update="ConfigManagerWindow.xaml.cs">
+	    <SubType>Code</SubType>
+	  </Compile>
 	  <Compile Update="Properties\Resources.Designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
@@ -38,6 +55,4 @@
 	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
 	  </EmbeddedResource>
 	</ItemGroup>
-
-
 </Project>
