--- a/UI/ColorVision.UI.Desktop/ColorVision.UI.Desktop.csproj
+++ b/UI/ColorVision.UI.Desktop/ColorVision.UI.Desktop.csproj
@@ -43,6 +43,9 @@
 	  <Compile Update="ConfigManagerWindow.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
+	  <Compile Update="Plugins\ViewDllVersionsWindow.xaml.cs">
+	    <SubType>Code</SubType>
+	  </Compile>
 	  <Compile Update="Properties\Resources.Designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
