--- a/ColorVision/Properties/launchSettings.json
+++ b/ColorVision/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "ColorVision": {
       "commandName": "Project",
+      "commandLineArgs": "-i \"\"C:\\Users\\Xin\\Desktop\\ecd55d852e4384805583f7c09c988c39.cvcal\"\"",
       "nativeDebugging": false,
       "hotReloadEnabled": true
     }
