--- a/ColorVision/Properties/launchSettings.json
+++ b/ColorVision/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ColorVision": {
       "commandName": "Project",
-      "commandLineArgs": "-i \"\"C:\\Users\\Xin\\Desktop\\ecd55d852e4384805583f7c09c988c39.cvcal\"\"",
+      "commandLineArgs": "-i \"C:\\Users\\Xin\\Desktop\\Restore\\ECD55D852E4384805583F7C09C988C39.cvcal\"",
       "nativeDebugging": false,
       "hotReloadEnabled": true
     }
