--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -11,7 +11,7 @@
 		<EnableNETAnalyzers>true</EnableNETAnalyzers>  
 		<AnalysisMode>Recommended</AnalysisMode>
 		<PlatformTarget>$(Platform)</PlatformTarget>
-		<TargetFrameworks>net8.0-windows</TargetFrameworks>   
+		<TargetFrameworks>net10.0-windows;net8.0-windows</TargetFrameworks>   
 		<NoWarn>CS8002</NoWarn>
 	    <VersionPrefix>1.3.18.11</VersionPrefix>  
 		<EnableWindowsTargeting>true</EnableWindowsTargeting>
