--- a/Engine/ColorVision.FileIO/ColorVision.FileIO.csproj
+++ b/Engine/ColorVision.FileIO/ColorVision.FileIO.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFrameworks>net8.0;net6.0;net461</TargetFrameworks>
+	  <TargetFrameworks>net10.0;net8.0;net6.0;net461</TargetFrameworks>
 	  <VersionPrefix>1.3.6.1</VersionPrefix>
 	  <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 	  <IncludeSymbols>True</IncludeSymbols>
