--- a/Test/opencv_helper_test/opencv_helper_test.vcxproj
+++ b/Test/opencv_helper_test/opencv_helper_test.vcxproj
@@ -159,6 +159,7 @@
     </ClCompile>
     <ClCompile Include="test_find_luminous_area.cpp" />
     <ClCompile Include="DatFileReader.cpp" />
+    <ClCompile Include="Video.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CVCIEFile.hpp" />
