--- a/packages/OpenCV.Release.x64.props
+++ b/packages/OpenCV.Release.x64.props
@@ -4,11 +4,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <IncludePath>$(SolutionDir)packages\opencv\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)packages\opencv\x64\vc17\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)packages\opencv\x64\vc18\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <Link>
-      <AdditionalDependencies>opencv_core4120.lib;opencv_highgui4120.lib;opencv_imgproc4120.lib;opencv_imgcodecs4120.lib;opencv_videoio4120.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opencv_core4130.lib;opencv_highgui4130.lib;opencv_imgproc4130.lib;opencv_imgcodecs4130.lib;opencv_videoio4130.lib;opencv_calib3d4130.lib;opencv_features2d4130.lib;opencv_flann4130.lib;opencv_photo4130.lib;opencv_video4130.lib;opencv_xfeatures2d4130.lib;opencv_ximgproc4130.lib;opencv_xphoto4130.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup />
