--- a/Engine/ColorVision.Engine/ColorVision.Engine.csproj
+++ b/Engine/ColorVision.Engine/ColorVision.Engine.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<VersionPrefix>1.4.1.7</VersionPrefix>
+		<VersionPrefix>1.4.2.1</VersionPrefix>
 		<OutputType>WinExe</OutputType>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>disable</ImplicitUsings>
@@ -16,13 +16,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="CsvHelper" Version="33.1.0" />
-		<PackageReference Include="DotNetCore.NPOI" Version="1.2.3" />
 		<PackageReference Include="itext" Version="9.5.0" />
 		<PackageReference Include="itext.bouncy-castle-adapter" Version="9.5.0" />
 		<PackageReference Include="MathNet.Numerics" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.3" />
 		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
-		<PackageReference Include="MQTTnet" Version="4.3.4.1084" />
+		<PackageReference Include="MQTTnet" Version="5.1.0.1559" />
+		<PackageReference Include="NPOI" Version="2.7.5" />
 		<PackageReference Include="OpenCvSharp4" Version="4.13.0.20260222" />
 		<PackageReference Include="OpenCvSharp4.runtime.win" Version="4.13.0.20260222" />
 		<PackageReference Include="OpenCvSharp4.WpfExtensions" Version="4.13.0.20260222" />
