--- a/Engine/FlowEngineLib/FlowEngineLib.csproj
+++ b/Engine/FlowEngineLib/FlowEngineLib.csproj
@@ -5,20 +5,15 @@
 		<UseWindowsForms>True</UseWindowsForms>
 		<LangVersion>11.0</LangVersion>
 		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-		<TargetFrameworks>net10.0-windows;net8.0-windows;net472</TargetFrameworks>
+		<TargetFrameworks>net10.0-windows;net8.0-windows</TargetFrameworks>
 		<VersionPrefix>2026.02.03.0</VersionPrefix>
 		<NoWarn>WFO1000,CA1853,CA1309,CA1715,CA1716,CS0649,CS0219,CS4014,CS1717,CS850,CA1850,CA1859,CA1725,CA5351,CS1859,CS1850,CA1864,CA1854,CA1822,CA1510,CA1852,CA1310,CA1001,CA1861,CA2208,CA1805,CA1707,CA2022,CA1711,CA1051,CA2211,CA2200,CA1018,CA1010,CA1311,CA1304,CA2249,CA1806,CA1720</NoWarn>
 		<SignAssembly>False</SignAssembly>
 	</PropertyGroup>
-
-  <!-- net472 相关引用 -->
-  <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
-    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-  </ItemGroup>
-
+	
 	<ItemGroup>
 		<PackageReference Include="log4net" Version="3.3.0" />
-		<PackageReference Include="MQTTnet" Version="4.3.4.1084" />
+		<PackageReference Include="MQTTnet" Version="5.1.0.1559" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
 		<PackageReference Include="CsvHelper" Version="33.1.0" />
 	</ItemGroup>
