--- a/Engine/ColorVision.Engine/ColorVision.Engine.csproj
+++ b/Engine/ColorVision.Engine/ColorVision.Engine.csproj
@@ -175,9 +175,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Update="Assets\Tool\CommMonitor.exe">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
 		<None Update="Assets\Tool\EditJson\Editjson.html">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
@@ -205,23 +202,8 @@
 		<None Update="Assets\Tool\EditJson\Editjson_files\UrlChangeTracker.js.下载">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
-		<None Update="Assets\InstallTool\Everything-1.4.1.1032.x64-Setup.exe">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="Assets\Tool\SpectrAdj.exe">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="Assets\Tool\sscom5.13.1.exe">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
 		<None Update="Assets\Tool\static\media\jsoneditor-icons.15f2789d.svg">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="Assets\Tool\UsbTreeView.exe">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="Assets\InstallTool\winrar-x64-720sc.exe">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Properties\Settings.settings">
 			<Generator>PublicSettingsSingleFileGenerator</Generator>
@@ -252,6 +234,7 @@
 
 	<ItemGroup>
 	  <Folder Include="Services\Devices\SMU\Job\" />
+	  <Folder Include="ToolPlugins\" />
 	</ItemGroup>
 
 </Project>
