--- a/Engine/ColorVision.ShellExtension/ColorVision.ShellExtension.csproj
+++ b/Engine/ColorVision.ShellExtension/ColorVision.ShellExtension.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0-windows</TargetFramework>
-    <Platforms>x64;ARM64</Platforms>
+    <Platforms>x64</Platforms>
     <EnableComHosting>true</EnableComHosting>
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <UseWindowsForms>true</UseWindowsForms>
