--- a/UI/ColorVision.Solution/ColorVision.Solution.csproj
+++ b/UI/ColorVision.Solution/ColorVision.Solution.csproj
@@ -80,4 +80,10 @@
 	  <Folder Include="Editor\Hex\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="Assets\Tool\aria2c.exe">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 </Project>
