--- a/UI/ColorVision.UI.Desktop/ColorVision.UI.Desktop.csproj
+++ b/UI/ColorVision.UI.Desktop/ColorVision.UI.Desktop.csproj
@@ -18,6 +18,7 @@
 
 
 	<ItemGroup>
+    <ProjectReference Include="..\ColorVision.Database\ColorVision.Database.csproj" />
     <ProjectReference Include="..\ColorVision.UI\ColorVision.UI.csproj" />
   </ItemGroup>
 
