--- a/Plugins/WindowsServicePlugin/WindowsServicePlugin.csproj
+++ b/Plugins/WindowsServicePlugin/WindowsServicePlugin.csproj
@@ -45,6 +45,8 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Engine\ColorVision.Engine\ColorVision.Engine.csproj" />
+	  <ProjectReference Include="..\..\UI\ColorVision.UI.Desktop\ColorVision.UI.Desktop.csproj" />
+	  <ProjectReference Include="..\..\UI\ColorVision.UI\ColorVision.UI.csproj" />
 	</ItemGroup>
 
 </Project>
